<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.proyecto1.MainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_recetas"
        android:name="com.example.proyecto1.RecetasFragment"
        android:label="@string/title_recetas"
        tools:layout="@layout/fragment_recetas" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.proyecto1.SettingsFragment"
        android:label="@string/title_ajustes"
        tools:layout="@layout/fragment_settings" />
</navigation>